[package]
name = "pda-counter"
version = "0.1.0"
edition = "2021"
authors = ["Adarsh adarshtechjob@gmail.com"]
description = "A minimal Solana smart contract using Anchor to demonstrate PDA-based counter logic."
license = "MIT"
repository = "https://github.com/webrowse/pda_counter"
homepage = "https://github.com/Webrowse/pda_counter"
readme = "../../README.md
keywords = ["solana", "anchor", "pda", "rust"]
categories = ["cryptography::cryptocurrencies", "wasm", "no-std"]

[lib]
crate-type = ["cdylib", "lib"]
name = "pda_counter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.31.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
